# OPC-UA.Server

./: .classpath  .gitignore  .project  CMakeCross.txt  CMakeLists.txt  build.properties.example  build.sh  build.xml  cmake.properties  ivy-x86_64-linux-gnu.xml  ivy.xml  ivysettings.xml  mkapp  sbuild.conf
debian/: changelog  control  (+5 more)
src/: CMakeLists.txt  OpcUaServerCore.cpp  OpcUaServerCore.h  Server.cpp  Server.h  ServerException.h  config.h.in  main.cpp
src/binaryServer/: CachedConverterCallback.cpp  CachedConverterCallback.h  Client.cpp  Client.h  ConfigLoader.cpp  ConfigLoader.h  Event.cpp  Event.h  EventField.cpp  EventField.h  HaSession.cpp  HaSession.h  HaSessionException.cpp  HaSessionException.h  HaSubscription.cpp  HaSubscription.h  HaSubscriptionException.cpp  HaSubscriptionException.h  NodeAttributes.cpp  NodeAttributes.h  Server.cpp  Server.h  ServerException.cpp  ServerException.h  main.cpp
src/binaryServer/logging/: ClientSdkLogger.cpp  ClientSdkLogger.h  ClientSdkLoggerFactory.cpp  ClientSdkLoggerFactory.h
src/common/: Exception.cpp  Mutex.cpp  MutexException.cpp  MutexLock.cpp
src/common/logging/: ConsoleLogger.cpp  ConsoleLoggerFactory.cpp  ILoggerFactory.cpp  JLogger.cpp  JLoggerFactory.cpp  Logger.cpp  LoggerFactory.cpp  LoggingException.cpp
src/common/native2J/: MessageHandler.h  Native2J.cpp  Native2J.h
src/ioDataProvider/: Array.cpp  Event.cpp  IODataProvider.cpp  IODataProviderException.cpp  IODataProviderFactory.cpp  MethodData.cpp  NodeData.cpp  NodeId.cpp  NodeProperties.cpp  OpcUaEventData.cpp  Scalar.cpp  Structure.cpp  SubscriberCallback.cpp  SubscriberCallbackException.cpp  Variant.cpp
src/logging/: ServerSdkLogger.cpp  ServerSdkLogger.h  ServerSdkLoggerFactory.cpp  ServerSdkLoggerFactory.h
src/main/native/: CMakeLists.txt  opcua_OPCUA.cpp  opcua_OPCUADataProvider.cpp
src/main/resources/: MANIFEST.MF  ivy.xml  module-info.java
src/main/resources/classpath/OSGI-INF/: havis.util.opcua.properties
src/provider/: CMakeLists.txt
src/provider/binary/: CMakeLists.txt
src/provider/binary/common/: ClientSocket.cpp  ClientSocket.h  ClientSocketException.cpp  ClientSocketException.h  ConversionException.cpp  ConversionException.h  ServerSocket.cpp  ServerSocket.h  ServerSocketException.cpp  ServerSocketException.h  TimeoutException.cpp  TimeoutException.h
src/provider/binary/ioDataProvider/: BinaryIODataProvider.cpp  BinaryIODataProvider.h  BinaryIODataProviderFactory.cpp  BinaryIODataProviderFactory.h
src/provider/binary/jDataProvider/: JDataProvider.cpp  JDataProvider.h  JDataProviderFactory.cpp  JDataProviderFactory.h
src/provider/binary/messages/: BinaryMessageDeserializer.cpp  BinaryMessageDeserializer.h  BinaryMessageSerializer.cpp  BinaryMessageSerializer.h  ConverterBin2IO.cpp  ConverterBin2IO.h  MessageDeserializerException.cpp  MessageDeserializerException.h  MessageQueue.cpp  MessageQueue.h  MessageSerializerException.cpp  MessageSerializerException.h
src/provider/binary/messages/dto/: Array.cpp  Array.h  Call.cpp  Call.h  CallResponse.cpp  CallResponse.h  Event.cpp  Event.h  Message.cpp  Message.h  MessageHeader.cpp  MessageHeader.h  Notification.cpp  Notification.h  ParamId.cpp  ParamId.h  ParamIdMessage.cpp  ParamIdMessage.h  ParamList.cpp  ParamList.h  ParamMap.cpp  ParamMap.h  Read.cpp  Read.h  ReadResponse.cpp  ReadResponse.h  Scalar.cpp  Scalar.h  Status.h  StatusMessage.cpp  StatusMessage.h  Struct.cpp  Struct.h  Subscribe.cpp  Subscribe.h  SubscribeResponse.cpp  SubscribeResponse.h  Unsubscribe.cpp  Unsubscribe.h  UnsubscribeResponse.cpp  (+7 more)
src/provider/buildingautomation/: CMakeLists.txt  buildingautomationtypeids.h
src/provider/buildingautomation/ioDataProvider/: BaIODataProvider.cpp  BaIODataProvider.h  BaIODataProviderFactory.cpp  BaIODataProviderFactory.h  bacommunicationinterface.cpp  bacommunicationinterface.h  bacontrollersimulation.cpp  bacontrollersimulation.h
src/provider/buildingautomation/sasModelProvider/: BaNodeManager.cpp  BaNodeManager.h  BaSASModelProvider.cpp  BaSASModelProvider.h  BaSASModelProviderFactory.cpp  BaSASModelProviderFactory.h  airconditionercontrollerobject.cpp  airconditionercontrollerobject.h  controllerobject.cpp  controllerobject.h  furnacecontrollerobject.cpp  furnacecontrollerobject.h
src/provider/uaNodeSetXml/: CMakeLists.txt
src/provider/uaNodeSetXml/sasModelProvider/: HaNodeManagerNodeSetXml.cpp  HaNodeManagerNodeSetXml.h  HaNodeManagerNodeSetXmlCreator.cpp  HaNodeManagerNodeSetXmlCreator.h  HaNodeManagerNodeSetXmlException.cpp  HaNodeManagerNodeSetXmlException.h  HaXmlUaNodeFactoryManager.cpp  HaXmlUaNodeFactoryManager.h  HaXmlUaNodeFactoryManagerSet.cpp  HaXmlUaNodeFactoryManagerSet.h  HaXmlUaNodeFactoryNamespace.cpp  HaXmlUaNodeFactoryNamespace.h  ObjectTypeElement.cpp  ObjectTypeElement.h  UaNodeSetXMLSASModelProvider.cpp  UaNodeSetXMLSASModelProvider.h  UaNodeSetXMLSASModelProviderFactory.cpp  UaNodeSetXMLSASModelProviderFactory.h
src/sasModelProvider/: SASModelProvider.cpp  SASModelProviderException.cpp  SASModelProviderFactory.cpp
src/sasModelProvider/base/: CodeNodeManagerBase.cpp  ConversionException.cpp  ConverterUa2IO.cpp  EventTypeData.cpp  EventTypeData.h  EventTypeRegistry.cpp  HaNodeManager.cpp  HaNodeManagerException.cpp  HaNodeManagerIODataProviderBridge.cpp  HaNodeManagerIODataProviderBridgeException.cpp  IODataManager.cpp  IODataProviderSubscriberCallback.cpp  NodeBrowser.cpp  NodeBrowserException.cpp
src/sasModelProvider/base/generator/: DataGenerator.cpp  DataGenerator.h  GeneratorException.cpp  GeneratorException.h  GeneratorIODataProvider.cpp  GeneratorIODataProvider.h
src/utilities/: linux.cpp  linux.h
test/: CMakeLists.txt
test/resources/: ServerTest.sh
test/resources/conf/: ServerConfig.xml
test/resources/conf/provider/binary/: config.xml
test/resources/conf/provider/uanodesetxml/: model.xml
test/src/: CMakeLists.txt  Env.cpp  Env.h  main.cpp  playground.cpp
test/src/common/logging/: TestConsoleLogger.cpp  TestConsoleLoggerFactory.cpp  TestLoggerFactory.cpp
test/src/sasModelProvider/base/: TestConverterUa2IO.cpp
(+83 files in other folders)
